--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,13 @@
   color: #61dafb;
 }
 
+img {
+  margin-top: 20px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
